--- a/scss/main.scss
+++ b/scss/main.scss
@@ -13,6 +13,9 @@ body {
     font-family: 'Open Sans', sans-serif;
     line-height: 1.6;
     background: $bg-color;
+
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
 a {
@@ -68,8 +71,17 @@ ul {
 #header{
     &-home{
         height: 100vh;
+        position: relative;
+
+        #decor-1 {
+            position: absolute;
+            right: -480px;
+            top: -120px;
+        }
 
         #header-content {
+            position: absolute;
+            z-index: 100;
             padding-top: 17%;
             align-items: center;
             text-align: center;
